updated company references

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>A Cloud Guru: Sample Web App</title>
+  <title>Globomantics: Sample Web App</title>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- css -->
@@ -26,7 +26,7 @@
         </button>
 
         <!-- Logo text or image -->
-        <a class="navbar-brand" href="index.html"><img src="img/logo/acglogo.png" width="300" height="40" alt=""></a>
+        <a class="navbar-brand" href="index.html"><img src="img/logo/globomantics-logo-white.png" width="300" height="40" alt=""></a>
 
       </div>
       <div class="navigation collapse navbar-collapse navbar-ex1-collapse">
@@ -51,7 +51,7 @@
             <div class="carousel-background"><img src="img/intro/1.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">A Cloud Guru</h2>
+                <h2 class="animated fadeInDown">Globomantics</h2>
                 <p class="animated fadeInUp">She's got a smile that it seems to me
                   Reminds me of childhood memories
                   Where everything
@@ -260,7 +260,7 @@
             <i class="fa fa-envelope fa-4x"></i>
             <h5>Email us</h5>
             <p>
-              info@acloud.guru<br />sales@acloud.guru
+              info@Globomantics<br />sales@Globomantics
             </p>
           </div>
         </div>
@@ -269,25 +269,25 @@
         <div class="col-md-12">
           <h5>We're on social networks</h5>
           <ul class="social-network">
-            <li><a href="https://www.facebook.com/acloudguru/?opt_id=oeu1597084547162r0.025421939100461977">
+            <li><a href="https://www.facebook.com/pluralsight">
                 <span class="fa-stack fa-2x">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                 </span></a>
             </li>
-            <li><a href="https://twitter.com/acloudguru/?opt_id=oeu1597084547162r0.025421939100461977">
+            <li><a href="https://x.com/pluralsight">
                 <span class="fa-stack fa-2x">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                 </span></a>
             </li>
-            <li><a href="https://www.linkedin.com/company/a-cloud-guru/?opt_id=oeu1597084547162r0.025421939100461977">
+            <li><a href="https://www.linkedin.com/company/pluralsight">
                 <span class="fa-stack fa-2x">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                 </span></a>
             </li>
-            <li><a href="https://www.linkedin.com/company/a-cloud-guru/?opt_id=oeu1597084547162r0.025421939100461977">
+            <li><a href="https://www.instagram.com/pluralsight">
               <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
@@ -304,7 +304,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p>Copyright &copy; A Cloud Guru. All rights reserved.</p>
+          <p>Copyright &copy; Globomantics. All rights reserved.</p>
         </div>
       </div>
     </div>
