--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <i class="fa fa-envelope fa-4x"></i>
             <h5>Email us</h5>
             <p>
-              info@Globomantics<br />sales@Globomantics
+              info@Globomantics.com<br />sales@Globomantics.com
             </p>
           </div>
         </div>
